Revision history for Test-File-Contents

0.11
      - No require Perl 5.6.2 or higher.
      - Added encoding option, to make sure that files are read in their
        proper encoding.
      - Significant refactoring; only visible change should be that the
        actualy MD5 checksum will no longer be included in the `file_md5sum`
        failure diagnostics.
      - Added `file_contents_eq_or_diff()`.

0.10  2011-02-18
      - Maintainership taken by David E. Wheeler.
      - Removed `examples/simple.pl`, since it wouldn't run anyway.
      - Added prototypes to the test functions.
      - Failure diagnostics now appear after the failure message, rather than
        before.
      - Renamed `file_contents_is` and `file_contents_isnt` to
        `file_contents_eq` and `file_contents_ne`, respectively. The old names
        remain as aliases for backwards compatibility.
      - Reworked default test descriptions to include the names of the files
        being tested.
      - Wordsmithed some of the diagnostic messages.

0.05    2007-03-20
      - Packaging fixes. No functional changes.

0.04    2005-10-26
      - Small tweaks to the packaging, mostly for CPANTS.  No functional
        changes.

0.03    2006-01-20
      - Added file_contents_isnt and file_contents_unlike and made file
        access OS-neutral (contributed by David Wheeler).

0.02    2004-08-25
      - Minor packaging fixes.

0.01    2004-08-25
      - First version, released on an unsuspecting world.
